# life-betterment-simulation

./: "The Social Influence Theory_ Beyond the Five" | Shared Grok Conversation.md  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DISCOVERY.md  GEMINI.md  LICENSE  README.md  easterncosmos-vv.html  ecosystem.yaml  pyproject.toml  seed.yaml  value-repos.json
.github/workflows/: ci.yml
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/design/: Human Design Schedule Mapping.txt  NSFW Dating Sim Design Prompt.docx  Siddhartha 30-Day Guided Journal.docx  animating-a-spiral-shape-for-web-2.md  designing-future-dating-sim-prompts.docx  easterncosmos-v.html  friend-zone_contagion_v1.8.html
docs/pitch/: index.html
docs/source-materials/: PROVENANCE.yaml
src/life_betterment_simulation/: __init__.py  core.py
src/life_betterment_simulation.egg-info/: PKG-INFO
tests/: test_core.py
